third_party/rust/paste/tests/ui/unexpected-modifier.stderr
error: unexpected modifier
 --> tests/ui/unexpected-modifier.rs:4:10
  |
4 |     fn [<:lower x>]() {}
  |          ^^^^^^
