third_party/rust/paste/tests/ui/unexpected-modifier.rs
use paste::paste;

paste! {
    fn [<:lower x>]() {}
}

fn main() {}
